[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
exclude = ["crates/annealers"]

[dependencies]
data_dealer.workspace = true
py3_controller.workspace = true

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
data_dealer = { path = "crates/data_dealer" }
py3_controller = { path = "crates/py3_controller" }