[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runner"

[workspace]
members = ["crates/*"]
exclude = ["crates/annealers", "crates/raw_subQubo"]

[dependencies]
data_dealer.workspace = true
data_transferer.workspace = true
# py3_controller.workspace = true

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
data_dealer = { path = "crates/data_dealer" }
data_transferer = { path = "crates/data_transferer" }